hero section html and some css applied

--- a/index.html
+++ b/index.html
@@ -4,13 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bangladesh 2.0</title>
+    <!-- Favicon Added -->
+     <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
     <!-- External CSS file linked -->
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- Header -->
     <header>
-
+        <!-- Navbar Starts -->
+         <!-- Hero Section Starts Here -->
+          <section id="hero" class="p-flex flex-center">
+            <div class="hero-container boxed-container p-flex flex-center">
+                <div class="hero-text-container">
+                    <h4 class="hero-sub-title">Bangladesh 2.0</h4>
+                    <h2 class="hero-title">Idea, innovation, vision and challenges in New Bangladesh.</h2>
+                    <a href="" class="btn-primary">Explore New Bangladesh</a>
+                </div>
+                <div class="hero-img-container">
+                    <img src="" alt="" class="hero-img">
+                </div>
+            </div>
+          </section>
     </header>
     <!-- Main -->
     <main>
