Hero section finished

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <a href="" class="btn-primary">Explore New Bangladesh</a>
                 </div>
                 <div class="hero-img-container">
-                    <img src="" alt="" class="hero-img">
+                    <img src="images/hero.png" alt="" class="hero-img">
                 </div>
             </div>
           </section>
