Pillars of Bangladesh Finished

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="hero-container boxed-container p-flex flex-center">
                 <div class="hero-text-container">
                     <h4 class="hero-sub-title">Bangladesh 2.0</h4>
-                    <h2 class="hero-title">Idea, innovation, vision and challenges in New Bangladesh.</h2>
+                    <h1 class="hero-title">Idea, innovation, vision and challenges in New Bangladesh.</h1>
                     <a href="" class="btn-primary">Explore New Bangladesh</a>
                 </div>
                 <div class="hero-img-container">
@@ -29,7 +29,34 @@
     </header>
     <!-- Main -->
     <main>
-
+        <!-- Pillars of Bangladesh Section Starts Here -->
+         <section id="pillar-section" class="p-flex flex-center">
+            <div class="boxed-container">
+                <h2 class="pillar-title secondary-title">Pillars of "Bangladesh 2.0"</h2>
+                <div class="pillar-box-container p-flex flex-center flex-gap">
+                    <div class="box">
+                        <img src="images/card-icon.png" alt="">
+                        <h3 class="sub-title">Innovation</h3>
+                        <p class="box-text primary-text">Bangladesh, to the east of India on the Bay of Bengal, is a South Asian country marked by lush greenery and many waterways.</p>
+                    </div>
+                    <div class="box">
+                        <img src="images/card-icon.png" alt="">
+                        <h3 class="sub-title">Infrastructure</h3>
+                        <p class="box-text primary-text">Bangladesh, located in South Asia, is a country known for its lush green landscapes, vibrant culture, and the majestic Sundarbans mangrove forest.</p>
+                    </div>
+                    <div class="box">
+                        <img src="images/card-icon.png" alt="">
+                        <h3 class="sub-title">Sustainability</h3>
+                        <p class="box-text primary-text">Dhaka, the bustling capital of Bangladesh, is one of the most densely populated cities in the world, showcasing the country's vibrant urban life.</p>
+                    </div>
+                    <div class="box">
+                        <img src="images/card-icon.png" alt="">
+                        <h3 class="sub-title">Empowerment</h3>
+                        <p class="box-text primary-text">The Cox's Bazar beach in Bangladesh is the world's longest unbroken sandy sea beach, attracting tourists from around the globe.</p>
+                    </div>
+                </div>
+            </div>
+         </section>
     </main>
     <!-- footer -->
     <footer>
