--- a/index.html
+++ b/index.html
@@ -57,6 +57,35 @@
                 </div>
             </div>
          </section>
+         <!-- The Vision of Future Section Starts Here -->
+          <section id="vision-section" class="p-flex flex-center">
+            <div class="boxed-container">
+                <div class="vision-text-container">
+                    <h2 class="secondary-title vision-title">The Vision of Future</h2>
+                    <p class="primary-text">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.</p>
+                </div>
+                <div class="vision-card-container">
+                    <div class="card card-1">
+                        <img src="images/card-icon.png" alt="" class="card-image">
+                        <h3 class="sub-title card-title">Digital Transformation</h3>
+                        <p class="card-text primary-text">Creating a nationwide digital ecosystem to enhance connectivity and access to services for all citizens.</p>
+                        <a href="" class="other-title card-btn-1">Learn More</a>
+                    </div>
+                    <div class="card card-2">
+                        <img src="" alt="" class="card-image">
+                        <h3 class="sub-title card-title">Green Energy</h3>
+                        <p class="card-text primary-text">Investments in solar and wind energy to ensure a sustainable and eco-friendly future.</p>
+                        <a href="" class="other-title card-btn-2">Learn More</a>
+                    </div>
+                    <div class="card card-3">
+                        <img src="" alt="" class="card-image">
+                        <h3 class="sub-title card-title">Modern Infrastructure</h3>
+                        <p class="card-text primary-text">Building state-of-the-art infrastructure to support economic growth and global competitiveness.</p>
+                        <a href="" class="other-title card-btn-3">Learn More</a>
+                    </div>
+                </div>
+            </div>
+          </section>
     </main>
     <!-- footer -->
     <footer>
