--- a/index.html
+++ b/index.html
@@ -1,95 +1,134 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bangladesh 2.0</title>
     <!-- Favicon Added -->
-     <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon" />
     <!-- External CSS file linked -->
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <!-- Header -->
     <header>
-        <!-- Navbar Starts -->
-         <!-- Hero Section Starts Here -->
-          <section id="hero" class="p-flex flex-center">
-            <div class="hero-container boxed-container p-flex flex-center">
-                <div class="hero-text-container">
-                    <h4 class="hero-sub-title">Bangladesh 2.0</h4>
-                    <h1 class="hero-title">Idea, innovation, vision and challenges in New Bangladesh.</h1>
-                    <a href="" class="btn-primary">Explore New Bangladesh</a>
-                </div>
-                <div class="hero-img-container">
-                    <img src="images/hero.png" alt="" class="hero-img">
-                </div>
-            </div>
-          </section>
+      <!-- Navbar Starts -->
+      <!-- Hero Section Starts Here -->
+      <section id="hero" class="p-flex flex-center">
+        <div class="hero-container boxed-container p-flex flex-center">
+          <div class="hero-text-container">
+            <h4 class="hero-sub-title">Bangladesh 2.0</h4>
+            <h1 class="hero-title">
+              Idea, innovation, vision and challenges in New Bangladesh.
+            </h1>
+            <a href="" class="btn-primary">Explore New Bangladesh</a>
+          </div>
+          <div class="hero-img-container">
+            <img src="images/hero.png" alt="" class="hero-img" />
+          </div>
+        </div>
+      </section>
     </header>
     <!-- Main -->
     <main>
-        <!-- Pillars of Bangladesh Section Starts Here -->
-         <section id="pillar-section" class="p-flex flex-center">
-            <div class="boxed-container">
-                <h2 class="pillar-title secondary-title">Pillars of "Bangladesh 2.0"</h2>
-                <div class="pillar-box-container p-flex flex-center flex-gap">
-                    <div class="box">
-                        <img src="images/card-icon.png" alt="">
-                        <h3 class="sub-title">Innovation</h3>
-                        <p class="box-text primary-text">Bangladesh, to the east of India on the Bay of Bengal, is a South Asian country marked by lush greenery and many waterways.</p>
-                    </div>
-                    <div class="box">
-                        <img src="images/card-icon.png" alt="">
-                        <h3 class="sub-title">Infrastructure</h3>
-                        <p class="box-text primary-text">Bangladesh, located in South Asia, is a country known for its lush green landscapes, vibrant culture, and the majestic Sundarbans mangrove forest.</p>
-                    </div>
-                    <div class="box">
-                        <img src="images/card-icon.png" alt="">
-                        <h3 class="sub-title">Sustainability</h3>
-                        <p class="box-text primary-text">Dhaka, the bustling capital of Bangladesh, is one of the most densely populated cities in the world, showcasing the country's vibrant urban life.</p>
-                    </div>
-                    <div class="box">
-                        <img src="images/card-icon.png" alt="">
-                        <h3 class="sub-title">Empowerment</h3>
-                        <p class="box-text primary-text">The Cox's Bazar beach in Bangladesh is the world's longest unbroken sandy sea beach, attracting tourists from around the globe.</p>
-                    </div>
-                </div>
+      <!-- Pillars of Bangladesh Section Starts Here -->
+      <section id="pillar-section" class="p-flex flex-center">
+        <div class="boxed-container">
+          <h2 class="pillar-title secondary-title">
+            Pillars of "Bangladesh 2.0"
+          </h2>
+          <div class="pillar-box-container p-flex flex-center flex-gap">
+            <div class="box">
+              <img src="images/card-icon.png" alt="" />
+              <h3 class="sub-title">Innovation</h3>
+              <p class="box-text primary-text">
+                Bangladesh, to the east of India on the Bay of Bengal, is a
+                South Asian country marked by lush greenery and many waterways.
+              </p>
             </div>
-         </section>
-         <!-- The Vision of Future Section Starts Here -->
-          <section id="vision-section" class="p-flex flex-center">
-            <div class="boxed-container">
-                <div class="vision-text-container">
-                    <h2 class="secondary-title vision-title">The Vision of Future</h2>
-                    <p class="primary-text">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.</p>
-                </div>
-                <div class="vision-card-container">
-                    <div class="card card-1">
-                        <img src="images/card-icon.png" alt="" class="card-image">
-                        <h3 class="sub-title card-title">Digital Transformation</h3>
-                        <p class="card-text primary-text">Creating a nationwide digital ecosystem to enhance connectivity and access to services for all citizens.</p>
-                        <a href="" class="other-title card-btn-1">Learn More</a>
-                    </div>
-                    <div class="card card-2">
-                        <img src="" alt="" class="card-image">
-                        <h3 class="sub-title card-title">Green Energy</h3>
-                        <p class="card-text primary-text">Investments in solar and wind energy to ensure a sustainable and eco-friendly future.</p>
-                        <a href="" class="other-title card-btn-2">Learn More</a>
-                    </div>
-                    <div class="card card-3">
-                        <img src="" alt="" class="card-image">
-                        <h3 class="sub-title card-title">Modern Infrastructure</h3>
-                        <p class="card-text primary-text">Building state-of-the-art infrastructure to support economic growth and global competitiveness.</p>
-                        <a href="" class="other-title card-btn-3">Learn More</a>
-                    </div>
-                </div>
+            <div class="box">
+              <img src="images/card-icon.png" alt="" />
+              <h3 class="sub-title">Infrastructure</h3>
+              <p class="box-text primary-text">
+                Bangladesh, located in South Asia, is a country known for its
+                lush green landscapes, vibrant culture, and the majestic
+                Sundarbans mangrove forest.
+              </p>
             </div>
-          </section>
+            <div class="box">
+              <img src="images/card-icon.png" alt="" />
+              <h3 class="sub-title">Sustainability</h3>
+              <p class="box-text primary-text">
+                Dhaka, the bustling capital of Bangladesh, is one of the most
+                densely populated cities in the world, showcasing the country's
+                vibrant urban life.
+              </p>
+            </div>
+            <div class="box">
+              <img src="images/card-icon.png" alt="" />
+              <h3 class="sub-title">Empowerment</h3>
+              <p class="box-text primary-text">
+                The Cox's Bazar beach in Bangladesh is the world's longest
+                unbroken sandy sea beach, attracting tourists from around the
+                globe.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- The Vision of Future Section Starts Here -->
+      <section id="vision-section" class="p-flex flex-center">
+        <div class="boxed-container">
+          <div class="vision-text-container">
+            <h2 class="secondary-title vision-title">The Vision of Future</h2>
+            <p class="primary-text">
+              Bangladesh 2.0 aims to redefine the nation’s trajectory by
+              embracing cutting-edge technology, promoting inclusive growth, and
+              ensuring sustainability. With initiatives in renewable energy,
+              digital transformation, and robust infrastructure, the country is
+              set to become a global model of development.
+            </p>
+          </div>
+          <div class="vision-card-container p-flex flex-center flex-gap">
+            <div class="card card-1 p-flex flex-col flex-gap">
+              <img src="images/card-icon.png" alt="" class="card-image" />
+              <div class="p-flex flex-col">
+                <h3 class="sub-title card-title">Digital Transformation</h3>
+                <p class="card-text primary-text">
+                  Creating a nationwide digital ecosystem to enhance
+                  connectivity and access to services for all citizens.
+                </p>
+              </div>
+              <a href="" class="other-title card-btn-1">Learn More</a>
+            </div>
+            <div class="card card-2 p-flex flex-col flex-gap">
+              <img src="images/card-icon.png" alt="" class="card-image" />
+              <div class="p-flex flex-col">
+                <h3 class="sub-title card-title">Green Energy</h3>
+                <p class="card-text primary-text">
+                  Investments in solar and wind energy to ensure a sustainable
+                  and eco-friendly future.
+                </p>
+              </div>
+              <a href="" class="other-title card-btn-2">Learn More</a>
+            </div>
+            <div class="card card-3 p-flex flex-col flex-gap">
+              <img src="images/card-icon.png" alt="" class="card-image" />
+              <div class="p-flex flex-col ">
+                <h3 class="sub-title card-title">Modern Infrastructure</h3>
+              <p class="card-text primary-text">
+                Building state-of-the-art infrastructure to support economic
+                growth and global competitiveness. Building state-of-the-art infrastructure to support economic
+                growth and global competitiveness.
+              </p>
+              </div>
+              <a href="" class="other-title card-btn-3">Learn More</a>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <!-- footer -->
-    <footer>
-
-    </footer>
-</body>
+    <footer></footer>
+  </body>
 </html>
