--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
           </div>
           <div class="vision-card-container p-flex flex-center flex-gap">
             <div class="card card-1 p-flex flex-col flex-gap">
-              <img src="images/card-icon.png" alt="" class="card-image" />
-              <div class="p-flex flex-col">
+              <div class="p-flex flex-col card-content">
+                <img src="images/card-icon.png" alt="" class="card-image" />
                 <h3 class="sub-title card-title">Digital Transformation</h3>
                 <p class="card-text primary-text">
                   Creating a nationwide digital ecosystem to enhance
@@ -102,8 +102,8 @@
               <a href="" class="other-title card-btn-1">Learn More</a>
             </div>
             <div class="card card-2 p-flex flex-col flex-gap">
-              <img src="images/card-icon.png" alt="" class="card-image" />
-              <div class="p-flex flex-col">
+              <div class="p-flex flex-col card-content">
+                <img src="images/card-icon.png" alt="" class="card-image" />
                 <h3 class="sub-title card-title">Green Energy</h3>
                 <p class="card-text primary-text">
                   Investments in solar and wind energy to ensure a sustainable
@@ -113,14 +113,13 @@
               <a href="" class="other-title card-btn-2">Learn More</a>
             </div>
             <div class="card card-3 p-flex flex-col flex-gap">
-              <img src="images/card-icon.png" alt="" class="card-image" />
-              <div class="p-flex flex-col ">
+              <div class="p-flex flex-col card-content">
+                <img src="images/card-icon.png" alt="" class="card-image" />
                 <h3 class="sub-title card-title">Modern Infrastructure</h3>
-              <p class="card-text primary-text">
-                Building state-of-the-art infrastructure to support economic
-                growth and global competitiveness. Building state-of-the-art infrastructure to support economic
-                growth and global competitiveness.
-              </p>
+                <p class="card-text primary-text">
+                  Building state-of-the-art infrastructure to support economic
+                  growth and global competitiveness.
+                </p>
               </div>
               <a href="" class="other-title card-btn-3">Learn More</a>
             </div>
