Vision of the future finished

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                   connectivity and access to services for all citizens.
                 </p>
               </div>
-              <a href="" class="other-title card-btn-1">Learn More</a>
+              <a href="" class="other-title card-btn-1 card-btn">Learn More</a>
             </div>
             <div class="card card-2 p-flex flex-col flex-gap">
               <div class="p-flex flex-col card-content">
@@ -110,7 +110,7 @@
                   and eco-friendly future.
                 </p>
               </div>
-              <a href="" class="other-title card-btn-2">Learn More</a>
+              <a href="" class="other-title card-btn-2 card-btn">Learn More</a>
             </div>
             <div class="card card-3 p-flex flex-col flex-gap">
               <div class="p-flex flex-col card-content">
@@ -121,7 +121,7 @@
                   growth and global competitiveness.
                 </p>
               </div>
-              <a href="" class="other-title card-btn-3">Learn More</a>
+              <a href="" class="other-title card-btn-3 card-btn">Learn More</a>
             </div>
           </div>
         </div>
