pillars gap fixed

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             Pillars of "Bangladesh 2.0"
           </h2>
           <div class="pillar-box-container p-flex flex-center flex-gap">
-            <div class="box">
+            <div class="box p-flex flex-col flex-gap flex-align-start">
               <img src="images/card-icon.png" alt="" />
               <h3 class="sub-title">Innovation</h3>
               <p class="box-text primary-text">
@@ -46,7 +46,7 @@
                 South Asian country marked by lush greenery and many waterways.
               </p>
             </div>
-            <div class="box">
+            <div class="box p-flex flex-col flex-gap flex-align-start">
               <img src="images/card-icon.png" alt="" />
               <h3 class="sub-title">Infrastructure</h3>
               <p class="box-text primary-text">
@@ -55,7 +55,7 @@
                 Sundarbans mangrove forest.
               </p>
             </div>
-            <div class="box">
+            <div class="box p-flex flex-col flex-gap flex-align-start">
               <img src="images/card-icon.png" alt="" />
               <h3 class="sub-title">Sustainability</h3>
               <p class="box-text primary-text">
@@ -64,7 +64,7 @@
                 vibrant urban life.
               </p>
             </div>
-            <div class="box">
+            <div class="box p-flex flex-col flex-gap flex-align-start">
               <img src="images/card-icon.png" alt="" />
               <h3 class="sub-title">Empowerment</h3>
               <p class="box-text primary-text">
