image strach fixed

--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
             </p>
           </div>
           <div class="vision-card-container p-flex flex-center flex-gap">
-            <div class="card card-1 p-flex flex-col flex-gap">
-              <div class="p-flex flex-col card-content">
+            <div class="card card-1 p-flex flex-col flex-gap flex-align-start">
+              <div class="p-flex flex-col flex-align-start">
                 <img src="images/card-icon.png" alt="" class="card-image" />
                 <h3 class="sub-title card-title">Digital Transformation</h3>
                 <p class="card-text primary-text">
@@ -101,8 +101,8 @@
               </div>
               <a href="" class="other-title card-btn-1 card-btn">Learn More</a>
             </div>
-            <div class="card card-2 p-flex flex-col flex-gap">
-              <div class="p-flex flex-col card-content">
+            <div class="card card-2 p-flex flex-col flex-gap flex-align-start">
+              <div class="p-flex flex-col flex-align-start">
                 <img src="images/card-icon.png" alt="" class="card-image" />
                 <h3 class="sub-title card-title">Green Energy</h3>
                 <p class="card-text primary-text">
@@ -112,8 +112,8 @@
               </div>
               <a href="" class="other-title card-btn-2 card-btn">Learn More</a>
             </div>
-            <div class="card card-3 p-flex flex-col flex-gap">
-              <div class="p-flex flex-col card-content">
+            <div class="card card-3 p-flex flex-col flex-gap flex-align-start">
+              <div class="p-flex flex-col flex-align-start">
                 <img src="images/card-icon.png" alt="" class="card-image" />
                 <h3 class="sub-title card-title">Modern Infrastructure</h3>
                 <p class="card-text primary-text">
