Quote section finished

--- a/index.html
+++ b/index.html
@@ -126,6 +126,14 @@
           </div>
         </div>
       </section>
+      <!-- Quote Section Starts here -->
+       <section class="p-flex flex-center">
+        <div class="boxed-container qoute-container">
+            <p class="primary-text">Poverty is not created by the poor. It is created by the system we have built, the institutions we have designed, and the concepts we have formulated. A social business is a company that is cause-driven rather than profit-driven, with the potential to act as a change agent for the world. Human beings are much bigger than just making money. Making money is no fun. Contributing to and changing the world is a lot more fun.</p>
+            <h4 class="author-name">Dr. muhammad Yunus</h4>
+            <p class="primary-text author-title">Chief Adviser of the People's Republic of Bangladesh</p>
+        </div>
+       </section>
     </main>
     <!-- footer -->
     <footer></footer>
