--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
           <h2 class="pillar-title secondary-title">
             Pillars of "Bangladesh 2.0"
           </h2>
-          <div class="pillar-box-container p-flex flex-center flex-gap">
-            <div class="box p-flex flex-col flex-gap flex-align-start">
+          <div class="pillar-box-container p-flex flex-center flex-gap-24">
+            <div class="box p-flex flex-col flex-gap-24 flex-align-start">
               <img src="images/card-icon.png" alt="" />
               <h3 class="sub-title">Innovation</h3>
               <p class="box-text primary-text">
@@ -46,7 +46,7 @@
                 South Asian country marked by lush greenery and many waterways.
               </p>
             </div>
-            <div class="box p-flex flex-col flex-gap flex-align-start">
+            <div class="box p-flex flex-col flex-gap-24 flex-align-start">
               <img src="images/card-icon.png" alt="" />
               <h3 class="sub-title">Infrastructure</h3>
               <p class="box-text primary-text">
@@ -55,7 +55,7 @@
                 Sundarbans mangrove forest.
               </p>
             </div>
-            <div class="box p-flex flex-col flex-gap flex-align-start">
+            <div class="box p-flex flex-col flex-gap-24 flex-align-start">
               <img src="images/card-icon.png" alt="" />
               <h3 class="sub-title">Sustainability</h3>
               <p class="box-text primary-text">
@@ -64,7 +64,7 @@
                 vibrant urban life.
               </p>
             </div>
-            <div class="box p-flex flex-col flex-gap flex-align-start">
+            <div class="box p-flex flex-col flex-gap-24 flex-align-start">
               <img src="images/card-icon.png" alt="" />
               <h3 class="sub-title">Empowerment</h3>
               <p class="box-text primary-text">
@@ -89,8 +89,8 @@
               set to become a global model of development.
             </p>
           </div>
-          <div class="vision-card-container p-flex flex-center flex-gap">
-            <div class="card card-1 p-flex flex-col flex-gap flex-align-start">
+          <div class="vision-card-container p-flex flex-center flex-gap-24">
+            <div class="card card-1 p-flex flex-col flex-gap-24 flex-align-start">
               <div class="p-flex flex-col flex-align-start">
                 <img src="images/card-icon.png" alt="" class="card-image" />
                 <h3 class="sub-title card-title">Digital Transformation</h3>
@@ -101,7 +101,7 @@
               </div>
               <a href="" class="other-title card-btn-1 card-btn">Learn More</a>
             </div>
-            <div class="card card-2 p-flex flex-col flex-gap flex-align-start">
+            <div class="card card-2 p-flex flex-col flex-gap-24 flex-align-start">
               <div class="p-flex flex-col flex-align-start">
                 <img src="images/card-icon.png" alt="" class="card-image" />
                 <h3 class="sub-title card-title">Green Energy</h3>
@@ -112,7 +112,7 @@
               </div>
               <a href="" class="other-title card-btn-2 card-btn">Learn More</a>
             </div>
-            <div class="card card-3 p-flex flex-col flex-gap flex-align-start">
+            <div class="card card-3 p-flex flex-col flex-gap-24 flex-align-start">
               <div class="p-flex flex-col flex-align-start">
                 <img src="images/card-icon.png" alt="" class="card-image" />
                 <h3 class="sub-title card-title">Modern Infrastructure</h3>
@@ -127,13 +127,77 @@
         </div>
       </section>
       <!-- Quote Section Starts here -->
-       <section class="p-flex flex-center">
+      <section class="p-flex flex-center">
         <div class="boxed-container qoute-container">
-            <p class="primary-text">Poverty is not created by the poor. It is created by the system we have built, the institutions we have designed, and the concepts we have formulated. A social business is a company that is cause-driven rather than profit-driven, with the potential to act as a change agent for the world. Human beings are much bigger than just making money. Making money is no fun. Contributing to and changing the world is a lot more fun.</p>
-            <h4 class="author-name">Dr. muhammad Yunus</h4>
-            <p class="primary-text author-title">Chief Adviser of the People's Republic of Bangladesh</p>
+          <p class="primary-text">
+            Poverty is not created by the poor. It is created by the system we
+            have built, the institutions we have designed, and the concepts we
+            have formulated. A social business is a company that is cause-driven
+            rather than profit-driven, with the potential to act as a change
+            agent for the world. Human beings are much bigger than just making
+            money. Making money is no fun. Contributing to and changing the
+            world is a lot more fun.
+          </p>
+          <h4 class="author-name">Dr. muhammad Yunus</h4>
+          <p class="primary-text author-title">
+            Chief Adviser of the People's Republic of Bangladesh
+          </p>
         </div>
-       </section>
+      </section>
+      <!-- Recent News Section -->
+      <section class="p-flex flex-center recent-news-section">
+        <div class="boxed-container">
+          <div class="news-text-container">
+            <h2 class="secondary-title">Recent News</h2>
+            <p class="primary-text">
+              Bangladesh, a South Asian country known for its rich cultural
+              heritage, lush greenery, vibrant festivals, and resilience, is
+              home to the world’s largest mangrove forest, the Sundarbans, the
+              longest natural beach, Cox’s Bazar, and a rapidly growing economy
+              driven by agriculture, textiles, and the indomitable spirit of its
+              people.
+            </p>
+          </div>
+          <div class="news-card-container flex-gap-24 p-flex flex-col">
+            <article class="news-card p-flex flex-center flex-gap-24">
+              <div class="image-container">
+                <img src="images/satelite.png" alt="" class="featured-image" />
+              </div>
+              <div class="news-container p-flex flex-col flex-align-start flex-gap-12">
+                <h3 class="news-title box-title">Bangladesh Launches New Satellite</h3>
+                <img src="images/al-jazeera.png" alt="" class="news-author" />
+                <p class="date-time primary-text">Date: 05/01/2025 | Time: 10.25 PM</p>
+                <p class="news-excerpt primary-text">Bangladesh successfully launched its new satellite, enhancing communication and technological capabilities, marking a significant step towards digital transformation and boosting connectivity across the country.</p>
+                <a href="" class="btn-primary news-btn">Read More</a>
+              </div>
+            </article>
+            <article class="news-card flex-row-reversed p-flex flex-center flex-gap-24">
+              <div class="image-container">
+                <img src="images/cox.png" alt="" class="featured-image" />
+              </div>
+              <div class="news-container p-flex flex-col flex-align-start flex-gap-12">
+                <h3 class="news-title box-title">Cox's Bazar: World's Longest Beach</h3>
+                <img src="images/al-jazeera.png" alt="" class="news-author" />
+                <p class="date-time primary-text">Date: 04/01/2025 | Time: 11.25 PM</p>
+                <p class="news-excerpt primary-text">Cox's Bazar, renowned for its unbroken sandy beach stretching 120 kilometers, attracts tourists worldwide with stunning sunsets, vibrant local culture, and serene natural beauty.</p>
+                <a href="" class="btn-primary news-btn">Read More</a>
+              </div>
+            </article>
+            <article class="news-card p-flex flex-center flex-gap-24">
+              <div class="image-container">
+                <img src="images/jungle.png" alt="" class="featured-image" />
+              </div>
+              <div class="news-container p-flex flex-col flex-align-start flex-gap-12">
+                <h3 class="news-title box-title">Exploring the Majestic Sundarbans</h3>
+                <img src="images/al-jazeera.png" alt="" class="news-author" />
+                <p class="date-time primary-text">Date: 05/01/2025 | Time: 10.25 PM</p>
+                <p class="news-excerpt primary-text">The Sundarbans, a UNESCO World Heritage site, is the largest mangrove forest in the world, home to diverse wildlife, including the endangered Royal Bengal Tiger, and plays a vital role in protecting coastal areas from natural disasters.</p>
+                <a href="" class="btn-primary news-btn">Read More</a>
+              </div>
+            </article>
+          </div>
+        </div>
+      </section>
     </main>
     <!-- footer -->
     <footer></footer>
