donate boxed done

--- a/index.html
+++ b/index.html
@@ -90,7 +90,9 @@
             </p>
           </div>
           <div class="vision-card-container p-flex flex-center flex-gap-24">
-            <div class="card card-1 p-flex flex-col flex-gap-24 flex-align-start">
+            <div
+              class="card card-1 p-flex flex-col flex-gap-24 flex-align-start"
+            >
               <div class="p-flex flex-col flex-align-start">
                 <img src="images/card-icon.png" alt="" class="card-image" />
                 <h3 class="sub-title card-title">Digital Transformation</h3>
@@ -101,7 +103,9 @@
               </div>
               <a href="" class="other-title card-btn-1 card-btn">Learn More</a>
             </div>
-            <div class="card card-2 p-flex flex-col flex-gap-24 flex-align-start">
+            <div
+              class="card card-2 p-flex flex-col flex-gap-24 flex-align-start"
+            >
               <div class="p-flex flex-col flex-align-start">
                 <img src="images/card-icon.png" alt="" class="card-image" />
                 <h3 class="sub-title card-title">Green Energy</h3>
@@ -112,7 +116,9 @@
               </div>
               <a href="" class="other-title card-btn-2 card-btn">Learn More</a>
             </div>
-            <div class="card card-3 p-flex flex-col flex-gap-24 flex-align-start">
+            <div
+              class="card card-3 p-flex flex-col flex-gap-24 flex-align-start"
+            >
               <div class="p-flex flex-col flex-align-start">
                 <img src="images/card-icon.png" alt="" class="card-image" />
                 <h3 class="sub-title card-title">Modern Infrastructure</h3>
@@ -163,23 +169,46 @@
               <div class="image-container">
                 <img src="images/satelite.png" alt="" class="featured-image" />
               </div>
-              <div class="news-container p-flex flex-col flex-align-start flex-gap-12">
-                <h3 class="news-title box-title">Bangladesh Launches New Satellite</h3>
+              <div
+                class="news-container p-flex flex-col flex-align-start flex-gap-12"
+              >
+                <h3 class="news-title box-title">
+                  Bangladesh Launches New Satellite
+                </h3>
                 <img src="images/al-jazeera.png" alt="" class="news-author" />
-                <p class="date-time primary-text">Date: 05/01/2025 | Time: 10.25 PM</p>
-                <p class="news-excerpt primary-text">Bangladesh successfully launched its new satellite, enhancing communication and technological capabilities, marking a significant step towards digital transformation and boosting connectivity across the country.</p>
+                <p class="date-time primary-text">
+                  Date: 05/01/2025 | Time: 10.25 PM
+                </p>
+                <p class="news-excerpt primary-text">
+                  Bangladesh successfully launched its new satellite, enhancing
+                  communication and technological capabilities, marking a
+                  significant step towards digital transformation and boosting
+                  connectivity across the country.
+                </p>
                 <a href="" class="btn-primary news-btn">Read More</a>
               </div>
             </article>
-            <article class="news-card flex-row-reversed p-flex flex-center flex-gap-24">
+            <article
+              class="news-card flex-row-reversed p-flex flex-center flex-gap-24"
+            >
               <div class="image-container">
                 <img src="images/cox.png" alt="" class="featured-image" />
               </div>
-              <div class="news-container p-flex flex-col flex-align-start flex-gap-12">
-                <h3 class="news-title box-title">Cox's Bazar: World's Longest Beach</h3>
+              <div
+                class="news-container p-flex flex-col flex-align-start flex-gap-12"
+              >
+                <h3 class="news-title box-title">
+                  Cox's Bazar: World's Longest Beach
+                </h3>
                 <img src="images/al-jazeera.png" alt="" class="news-author" />
-                <p class="date-time primary-text">Date: 04/01/2025 | Time: 11.25 PM</p>
-                <p class="news-excerpt primary-text">Cox's Bazar, renowned for its unbroken sandy beach stretching 120 kilometers, attracts tourists worldwide with stunning sunsets, vibrant local culture, and serene natural beauty.</p>
+                <p class="date-time primary-text">
+                  Date: 04/01/2025 | Time: 11.25 PM
+                </p>
+                <p class="news-excerpt primary-text">
+                  Cox's Bazar, renowned for its unbroken sandy beach stretching
+                  120 kilometers, attracts tourists worldwide with stunning
+                  sunsets, vibrant local culture, and serene natural beauty.
+                </p>
                 <a href="" class="btn-primary news-btn">Read More</a>
               </div>
             </article>
@@ -187,14 +216,52 @@
               <div class="image-container">
                 <img src="images/jungle.png" alt="" class="featured-image" />
               </div>
-              <div class="news-container p-flex flex-col flex-align-start flex-gap-12">
-                <h3 class="news-title box-title">Exploring the Majestic Sundarbans</h3>
+              <div
+                class="news-container p-flex flex-col flex-align-start flex-gap-12"
+              >
+                <h3 class="news-title box-title">
+                  Exploring the Majestic Sundarbans
+                </h3>
                 <img src="images/al-jazeera.png" alt="" class="news-author" />
-                <p class="date-time primary-text">Date: 05/01/2025 | Time: 10.25 PM</p>
-                <p class="news-excerpt primary-text">The Sundarbans, a UNESCO World Heritage site, is the largest mangrove forest in the world, home to diverse wildlife, including the endangered Royal Bengal Tiger, and plays a vital role in protecting coastal areas from natural disasters.</p>
+                <p class="date-time primary-text">
+                  Date: 05/01/2025 | Time: 10.25 PM
+                </p>
+                <p class="news-excerpt primary-text">
+                  The Sundarbans, a UNESCO World Heritage site, is the largest
+                  mangrove forest in the world, home to diverse wildlife,
+                  including the endangered Royal Bengal Tiger, and plays a vital
+                  role in protecting coastal areas from natural disasters.
+                </p>
                 <a href="" class="btn-primary news-btn">Read More</a>
               </div>
             </article>
+          </div>
+        </div>
+      </section>
+      <!-- Donation Section Starts Here -->
+      <section class="p-flex flex-center">
+        <div class="boxed-container">
+          <div style="text-align: center;">
+            <h2 class="secondary-title">Donate Today</h2>
+            <p class="primary-text">Support Bangladesh by donating to initiatives focused on disaster relief, education, healthcare, and sustainable development. Your contributions empower communities, improve lives, and help build a brighter future for the nation.</p>
+          </div>
+          <div class="donation-container p-flex flex-gap-24">
+            <div class="amount-box p-flex flex-center">
+              <h2 class="secondary-title">$1000</h2>
+            </div>
+            <div class="amount-box amount-box-active p-flex flex-center">
+              <h2 class="secondary-title">$2000</h2>
+            </div>
+            <div class="amount-box p-flex flex-center">
+              <h2 class="secondary-title">$5000</h2>
+            </div>
+            <div class="amount-box p-flex flex-center">
+              <h2 class="secondary-title">$10000</h2>
+            </div>
+          </div>
+          <div class="donation-form-container">
+            <input type="text" placeholder="Other Amount ($)" />
+            <input type="submit" value="Donate Now" />
           </div>
         </div>
       </section>
