donation section complete

--- a/index.html
+++ b/index.html
@@ -259,9 +259,9 @@
               <h2 class="secondary-title">$10000</h2>
             </div>
           </div>
-          <div class="donation-form-container">
+          <div class="donation-form-container ">
             <input type="text" placeholder="Other Amount ($)" />
-            <input type="submit" value="Donate Now" />
+            <input type="submit" class="btn-primary donate-btn" value="Donate Now" />
           </div>
         </div>
       </section>
