--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
       <!-- Donation Section Starts Here -->
       <section class="p-flex flex-center">
         <div class="boxed-container">
-          <div style="text-align: center;">
+          <div class="text-center">
             <h2 class="secondary-title">Donate Today</h2>
             <p class="primary-text">Support Bangladesh by donating to initiatives focused on disaster relief, education, healthcare, and sustainable development. Your contributions empower communities, improve lives, and help build a brighter future for the nation.</p>
           </div>
@@ -265,6 +265,20 @@
           </div>
         </div>
       </section>
+      <!-- Newsletter Section -->
+       <section id="newsletter-section" class="p-flex flex-center">
+        <div class="boxed-container newsletter-container p-flex flex-center">
+          <div class="inner-newsletter-container p-flex flex-center flex-col text-center">
+            <h2 class="secondary-title">Subscribe Newsletter</h2>
+            <p class="primary-text">Your donation can make a meaningful impact in Bangladesh by supporting essential programs in education, healthcare, and disaster recovery.</p>
+            <form action="">
+              <input type="email" placeholder="Enter your email here" class="newsletter-email-input">
+              <input type="submit" value="Subscribe" class="btn-primary newsletter-btn">
+            </form>
+            <p class="primary-text">We promise not to spam you!</p>
+          </div>
+        </div>
+       </section>
     </main>
     <!-- footer -->
     <footer></footer>
