--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
     <!-- Header -->
     <header>
       <!-- Navbar Starts -->
+       <nav>
+        <div class="boxed-container p-flex nav-inner-container">
+          <h3 class="box-title">Bangladesh 2.0</h3>
+          <a href="" class="btn-primary">Sign in</a>
+        </div>
+       </nav>
       <!-- Hero Section Starts Here -->
       <section id="hero" class="p-flex flex-center">
         <div class="hero-container boxed-container p-flex flex-center">
