--- a/index.html
+++ b/index.html
@@ -287,6 +287,16 @@
        </section>
     </main>
     <!-- footer -->
-    <footer></footer>
+    <footer>
+      <div class="boxed-container footer-container text-center">
+        <h3 class="footer-title box-title">Bangladesh 2.0</h3>
+        <div class="divider"></div>
+        <div class="social-icon-container">
+          <img src="images/facebook.png" alt="" class="social-icon">
+          <img src="images/instagram.png" alt="" class="social-icon">
+          <img src="images/x.png" alt="" class="social-icon">
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
