Nav button fixed

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
        <nav>
         <div class="boxed-container p-flex nav-inner-container">
           <h3 class="box-title">Bangladesh 2.0</h3>
-          <a href="" class="btn-primary">Sign in</a>
+          <a href="" class="btn-primary nav-btn">Sign in</a>
         </div>
        </nav>
       <!-- Hero Section Starts Here -->
